--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,14 @@
 @import "tailwindcss";
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Ringift';
+  src: url('/fonts/ringift.ttf');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 
 @custom-variant dark (&:is(.dark *));
 
